# mizui

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/mizui/: CMakeLists.txt  program.cpp
src/shared/: CMakeLists.txt  decl.h
src/shared/core/: application.cpp  application.h  assets_manager.cpp  assets_manager.h
src/shared/vfs/: path.h
